feat: P1 retrieval quality enhancements - Sentence Window + CrossEncoder + OTel observability
## P1 能力一: Sentence Window + Auto-Merging 检索策略
- HierarchicalChunkStrategy: 父子双层分块结构 (Parent + Leaf)
- 每个 Leaf 存储 windowContent (周围 N 句上下文)
- HierarchicalRetrievalService: 三步检索流程
  Step1: 细粒度 Sentence 召回
  Step2: Auto-Merging (同父句子聚集时合并为父块)
  Step3: Sentence Window 扩展
- ChunkStrategyFactory 新增 'swa' 策略注册
- 新增文档类型自动识别器 (DocumentTypeDetector)
- 新增智能分块 (getIntelligentChunks / getIntelligentChunksByFileName)

## P1 能力二: True CrossEncoder 重排
- SiliconFlowReranker: 调用 SiliconFlow /rerank API
  (BAAI/bge-reranker-v2-m3 模型)
- WebClient 实现，支持配置化 (base-url, model, api-key)
- 失败时优雅回退到 Bi-Encoder Cosine 近似
- AppConfig 新增 Reranker.Siliconflow 嵌套配置类
- application.yml 新增 reranker.siliconflow.* 配置项

## P1 能力三: OpenTelemetry 可观测性
- OpenTelemetryConfig: 条件加载 (@ConditionalOnProperty otel.enabled)
  TracerProvider + MeterProvider + OTLP 导出
- RAGObservabilityService: 全链路 Span + Micrometer Metrics
  指标: rag.retrieval.total/latency, rag.rerank.*, rag.llm.*
  RetrievalContext 记录检索全链路上下文
- RetrievalApplicationService: 重构支持 hierarchical/hybrid 策略切换
  可观测性数据在检索完成后统一记录

## 数据库
- docs/database/23-hierarchical-chunks.sql: t_chunk_hierarchy 表
  (parent_chunk_id, chunk_level, window_content, sibling_count 等)
  t_rerank_log / t_retrieval_quality_log

## 测试
- HierarchicalChunkStrategyTest: 8 个测试用例
  父子结构、Sentence Window、Token 估算、边界情况
- SiliconFlowRerankerTest: 6 个测试用例
  禁用跳过、回退机制、空输入、分数范围验证
- ChunkStrategyTest: 文档类型检测、8维质量分析、策略对比

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>